[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-mining-report"
version = "0.1.0"
description = "Visualize where Anki Lapis cards came from while mining Japanese."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
japanese-mining-report = "scripts.visualize_lapis_sources:main"

[tool.setuptools.packages.find]
include = ["scripts"]
